add figure 3 complete

--- a/Figure_4.ipynb
+++ b/Figure_4.ipynb
@@ -640,7 +640,9 @@
   {
    "cell_type": "markdown",
    "id": "e33939dc-64f9-40fb-9976-61478f1d9ae8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Load CMIP6 Historical"
    ]
