--- a/Figure_1.ipynb
+++ b/Figure_1.ipynb
@@ -138,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30399/2520827410.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "/tmp/ipykernel_47168/2520827410.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  PDO_data = pd.read_csv('data/PacificDecadalOscillation.csv', skiprows=11, header=None, sep='\\s\\s')\n"
      ]
     }
@@ -193,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f526f24aed0>]"
+       "[<matplotlib.lines.Line2D at 0x7fee46089e50>]"
       ]
      },
      "execution_count": 13,
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f526ed34dd0>"
+       "<matplotlib.collections.QuadMesh at 0x7fee44774810>"
       ]
      },
      "execution_count": 15,
@@ -276,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f524ede0c90>"
+       "<matplotlib.collections.QuadMesh at 0x7fee2479d150>"
       ]
      },
      "execution_count": 16,
@@ -464,8 +464,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.98 s, sys: 6.56 ms, total: 2.99 s\n",
-      "Wall time: 2.98 s\n"
+      "CPU times: user 3.88 s, sys: 9.83 ms, total: 3.89 s\n",
+      "Wall time: 3.87 s\n"
      ]
     }
    ],
@@ -483,7 +483,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f524ecf57d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fee24666790>]"
       ]
      },
      "execution_count": 22,
