--- a/Figure_2.ipynb
+++ b/Figure_2.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "## Code required to create Figure 2\n",
-    "Entire notebook takes: 41 seconds on Intel i7-10750 using > 4GB RAM"
+    "Entire notebook takes: 41 seconds on Intel i7-10750 using > 4GB RAM\n",
+    "\n",
+    "TODO: add pymannkendall test to figure to include sig or not trends"
    ]
   },
   {
@@ -22,6 +24,7 @@
     "import xarray as xr\n",
     "from statsmodels.tsa.stattools import adfuller ## Augmented Dickey-Fuller test for non-stationarity in time series\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "import pymannkendall\n",
     "\n",
     "## Plotting\n",
     "import matplotlib.pyplot as plt\n",
@@ -223,6 +226,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "c09d7310-7a39-4376-bc27-b6abad635895",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Modified_Mann_Kendall_Test_Hamed_Rao_Approach(trend='increasing', h=True, p=0.025836527064228232, z=2.228660128266145, Tau=0.041105177245287, s=4836660.0, var_s=4709808528692.021, slope=0.0, intercept=42.0)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pymannkendall.hamed_rao_modification_test(era_npac_day_dict['Woollings2010_NorthPacific'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "ab69266d-1b8a-4b62-aba8-d82f7979285b",
    "metadata": {},
@@ -235,8 +259,8 @@
       "JRA-55\n",
       "MERRA-2\n",
       "NCEP/DOE II\n",
-      "CPU times: user 26.9 s, sys: 908 µs, total: 26.9 s\n",
-      "Wall time: 27 s\n"
+      "CPU times: user 45 s, sys: 5.76 ms, total: 45 s\n",
+      "Wall time: 45.1 s\n"
      ]
     }
    ],
@@ -569,9 +593,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14174/1016636638.py:30: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_15979/1016636638.py:30: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(), fontsize=12);\n",
-      "/tmp/ipykernel_14174/1016636638.py:30: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_15979/1016636638.py:30: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(), fontsize=12);\n"
      ]
     },
@@ -631,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "5c5a08cf-851d-4ddc-a124-02ffed5f3435",
    "metadata": {},
    "outputs": [
@@ -641,7 +665,7 @@
        "(0.3546503976066409, 0.9313594448854947)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "18b1aba5-f1c4-46f9-8cc9-2ea66c0fb7a7",
    "metadata": {},
    "outputs": [
@@ -670,7 +694,7 @@
        "Text(0.5, -0.15, 'Metric-wise range')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
