--- a/Figure_4.ipynb
+++ b/Figure_4.ipynb
@@ -6,9 +6,13 @@
    "metadata": {},
    "source": [
     "## Code required to create Figure 4\n",
-    "Entire notebook takes ~35 minutes to run on Intel i7-10750 using > 10GB RAM\n",
+    "Entire notebook takes ~35 minutes to run on Intel i7-10750 using 32GB RAM  \n",
     "\n",
-    "Note: figure 4 is towards the end of the notebook"
+    "Note: figure 4 is towards the end of the notebook\n",
+    "\n",
+    "## TODO: \n",
+    "add Mann-Whitney U test to compare shift\n",
+    "\n"
    ]
   },
   {
@@ -5013,7 +5017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
