update with note about where it is from

--- a/Figure_2.ipynb
+++ b/Figure_2.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "## Code required to create Figure 2\n",
-    "Entire notebook takes: 41 seconds on Intel i7-10750 using > 4GB RAM\n",
+    "*From \"Exploring uncertainty of trends in the lower-tropospheric North Pacific Jet.\"* \n",
     "\n",
-    "TODO: add pymannkendall test to figure to include sig or not trends"
+    "Entire notebook takes: 41 seconds on Intel i7-10750 using > 4GB RAM\n"
    ]
   },
   {
@@ -2343,7 +2343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
