--- a/Figure_3.ipynb
+++ b/Figure_3.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "## Code required to create Figure 3\n",
+    "\n",
+    "*From \"Exploring uncertainty of trends in the lower-tropospheric North Pacific Jet.\"* \n",
+    "\n",
     "Entire notebook takes: ~15 minutes on Intel i7-10750 using > 6GB RAM"
    ]
   },
@@ -1945,7 +1948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
