--- a/Figure_4_intramodel.ipynb
+++ b/Figure_4_intramodel.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d34dedbc-a7d0-4e6d-b0d7-d144cfaf6f98",
+   "metadata": {},
+   "source": [
+    "## Code required to create Figure 4\n",
+    "*From \"Exploring uncertainty of trends in the lower-tropospheric North Pacific Jet.\"* \n",
+    "\n",
+    "Entire notebook takes ~n minutes to run on Intel i7-10750 using 32GB RAM  \n",
+    "\n",
+    "Note: figure 4 is towards the end of the notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "f8c5a5bc-a062-45db-8b19-a380a909b1e2",
@@ -1325,7 +1338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
