--- a/Figure_1.ipynb
+++ b/Figure_1.ipynb
@@ -757,7 +757,7 @@
     "    \n",
     "axes[-1].set_xlabel(\"\")\n",
     "fig.subplots_adjust(hspace=0.2)\n",
-    "# fig.savefig('figures/figure_1_annual.png', dpi=300, bbox_inches='tight', transparent=False)"
+    "# fig.savefig('figures/figure_1.png', dpi=300, bbox_inches='tight', transparent=False)"
    ]
   },
   {
