--- a/Figure_4_intramodel.ipynb
+++ b/Figure_4_intramodel.ipynb
@@ -5,7 +5,7 @@
    "id": "d34dedbc-a7d0-4e6d-b0d7-d144cfaf6f98",
    "metadata": {},
    "source": [
-    "## Code required to create Figure 4\n",
+    "## Code required to create intramodel subfigure of Figure 4\n",
     "*From \"Exploring uncertainty of trends in the lower-tropospheric North Pacific Jet.\"* \n",
     "\n",
     "Entire notebook takes ~n minutes to run on Intel i7-10750 using 32GB RAM  \n",
